--- a/src/main/java/properties/local_en.properties
+++ b/src/main/java/properties/local_en.properties
@@ -1,6 +1,6 @@
 local.message = Hello
-local.loc.button.en = EN
-local.loc.button.ru = RU
+local.locbutton.en = EN
+local.locbutton.ru = RU
 
-local.main.navigate.home = Home
-local.main.navigate.registration = Registration
+local.main.navigate.home = HOME
+local.main.navigate.registration = REGISTRATION
