--- a/src/main/java/properties/local_ru.properties
+++ b/src/main/java/properties/local_ru.properties
@@ -1,6 +1,6 @@
 local.message = \u041F\u0440\u0438\u0432\u0435\u0442
-local.loc.button.en = \u0430\u043D\u0433
-local.loc.button.ru = \u0440\u0443\u0441
+local.locbutton.en = \u0430\u043D\u0433
+local.locbutton.ru = \u0440\u0443\u0441
 
-local.main.navigate.home = \u0414\u043E\u043C\u043E\u0439
-local.main.navigate.registration = \u0420\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u044F
+local.main.navigate.home = \u0414\u041E\u041C\u041E\u0419
+local.main.navigate.registration = \u0420\u0415\u0413\u0418\u0421\u0422\u0420\u0410\u0426\u0418\u042F
