--- a/src/main/java/properties/local_en.properties
+++ b/src/main/java/properties/local_en.properties
@@ -1,6 +1,7 @@
-local.message = Hello
+local.message = local with using Jstl test
 local.locbutton.en = EN
 local.locbutton.ru = RU
 
 local.main.navigate.home = HOME
 local.main.navigate.registration = REGISTRATION
+local.main.navigate.logIn = LOG IN
