change main page CSS, add search bar

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -1,6 +1,8 @@
 local.message = local with using Jstl test
 local.locbutton.en = EN
 local.locbutton.ru = RU
+local.locbutton.search = Go!
+local.search_placeholder = Search...
 
 local.main.navigate.home = HOME
 local.main.navigate.registration = REGISTRATION
