--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -1,7 +1,9 @@
 local.message = \u041B\u043E\u043A\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F \u0442\u0435\u0441\u0442
 local.locbutton.en = \u0430\u043D\u0433
 local.locbutton.ru = \u0440\u0443\u0441
+local.locbutton.search = \u041F\u043E\u0438\u0441\u043A
+local.search_placeholder = \u041D\u0430\u0439\u0442\u0438...
 
 local.main.navigate.home = \u041D\u0410 \u0413\u041B\u0410\u0412\u041D\u0423\u042E
 local.main.navigate.registration = \u0420\u0415\u0413\u0418\u0421\u0422\u0420\u0410\u0426\u0418\u042F
-local.main.navigate.logIn = \u0410\u0412\u0422\u041E\u0420\u0418\u0417\u0418\u0420\u041E\u0412\u0410\u0422\u042C\u0421\u042F
+local.main.navigate.logIn = \u0412\u041E\u0419\u0422\u0418
