add update user and user info

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -6,4 +6,4 @@ local.search_placeholder = Search...
 
 local.main.navigate.home = HOME
 local.main.navigate.registration = REGISTRATION
-local.main.navigate.logIn = LOG IN
+local.main.navigate.authorization = LOG IN
