--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -6,4 +6,4 @@ local.search_placeholder = \u041D\u0430\u0439\u0442\u0438...
 
 local.main.navigate.home = \u041D\u0410 \u0413\u041B\u0410\u0412\u041D\u0423\u042E
 local.main.navigate.registration = \u0420\u0415\u0413\u0418\u0421\u0422\u0420\u0410\u0426\u0418\u042F
-local.main.navigate.logIn = \u0412\u041E\u0419\u0422\u0418
+local.main.navigate.authorization = \u0412\u041E\u0419\u0422\u0418
