add user update and delete + userInfo.jsp

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -7,3 +7,4 @@ local.search_placeholder = Search...
 local.main.navigate.home = HOME
 local.main.navigate.registration = REGISTRATION
 local.main.navigate.authorization = LOG IN
+local.main.navigate.admin_page = ADMIN PAGE
