add chosen user's login to session - user update works

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -1,6 +1,6 @@
 local.message = local with using Jstl test
-local.locbutton.en = EN
-local.locbutton.ru = RU
+local.locbutton.en = eng
+local.locbutton.ru = \u0440\u0443\u0441
 local.locbutton.search = Go!
 local.search_placeholder = Search...
 
