--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -1,5 +1,5 @@
 local.message = \u041B\u043E\u043A\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F \u0442\u0435\u0441\u0442
-local.locbutton.en = \u0430\u043D\u0433
+local.locbutton.en = eng
 local.locbutton.ru = \u0440\u0443\u0441
 local.locbutton.search = \u041F\u043E\u0438\u0441\u043A
 local.search_placeholder = \u041D\u0430\u0439\u0442\u0438...
