add some translate to main page

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -8,3 +8,16 @@ local.main.navigate.home = HOME
 local.main.navigate.registration = REGISTRATION
 local.main.navigate.authorization = LOG IN
 local.main.navigate.admin_page = ADMIN PAGE
+local.main.navigate.log_out = LOG OUT
+local.main.message.to_save_program = To save program:
+local.main.form.number = number
+local.main.form.operation_number = operation number
+local.main.form.program_text = program text
+local.main.form.comment = comment*
+local.main.form.detail = detail
+local.main.form.cnc_machine = cnc_machine
+local.main.form.code_equipment = equipment code
+local.main.button.save = save
+local.main.button.reset = reset
+local.main.message.program_list = Previous program list:
+local.main.table.personnel_number = personnel number
