--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -10,7 +10,7 @@ local.main.navigate.authorization = LOG IN
 local.main.navigate.admin_page = ADMIN PAGE
 local.main.navigate.log_out = LOG OUT
 local.main.message.to_save_program = To save program:
-local.main.form.number = number
+local.main.form.number = number CNC program
 local.main.form.operation_number = operation number
 local.main.form.program_text = program text
 local.main.form.comment = comment*
@@ -21,3 +21,5 @@ local.main.button.save = save
 local.main.button.reset = reset
 local.main.message.program_list = Previous program list:
 local.main.table.personnel_number = personnel number
+local.main.table.creation_date = creation date
+local.main.table.cnc_machine_model = CNC machine model
