--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -10,7 +10,7 @@ local.main.navigate.authorization = \u0412\u041E\u0419\u0422\u0418
 local.main.navigate.admin_page = \u0410\u0414\u041C\u0418\u041D\u0418\u0421\u0422\u0420\u0410\u0422\u041E\u0420
 local.main.navigate.log_out = \u0412\u042B\u0419\u0422\u0418
 local.main.message.to_save_program = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0443:
-local.main.form.number = \u043D\u043E\u043C\u0435\u0440
+local.main.form.number = \u043D\u043E\u043C\u0435\u0440 \u0423\u041F
 local.main.form.operation_number = \u043D\u043E\u043C\u0435\u0440 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u0438
 local.main.form.program_text = \u0442\u0435\u043A\u0441\u0442 \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u044B
 local.main.form.comment = \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439*
@@ -21,3 +21,5 @@ local.main.button.save = \u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 local.main.button.reset = \u0441\u0431\u0440\u043E\u0441\u0438\u0442\u044C
 local.main.message.program_list = \u0421\u043F\u0438\u0441\u043E\u043A \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C:
 local.main.table.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
+local.main.table.creation_date = \u0434\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+local.main.table.cnc_machine_model = \u043C\u043E\u0434\u0435\u043B\u044C \u043E\u0431\u043E\u0440\u0443\u0434\u043E\u0432\u0430\u043D\u0438\u044F
