add navigation button

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -9,6 +9,7 @@ local.main.navigate.registration = REGISTRATION
 local.main.navigate.authorization = LOG IN
 local.main.navigate.admin_page = ADMIN PAGE
 local.main.navigate.log_out = LOG OUT
+local.main.navigate.users = USERS
 local.main.message.to_save_program = To save program:
 local.main.form.number = number CNC program
 local.main.form.operation_number = operation number
