--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -9,6 +9,7 @@ local.main.navigate.registration = \u0420\u0415\u0413\u0418\u0421\u0422\u0420\u0
 local.main.navigate.authorization = \u0412\u041E\u0419\u0422\u0418
 local.main.navigate.admin_page = \u0410\u0414\u041C\u0418\u041D\u0418\u0421\u0422\u0420\u0410\u0422\u041E\u0420
 local.main.navigate.log_out = \u0412\u042B\u0419\u0422\u0418
+local.main.navigate.users = \u041F\u041E\u041B\u042C\u0417\u041E\u0412\u0410\u0422\u0415\u041B\u0418
 local.main.message.to_save_program = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0443:
 local.main.form.number = \u043D\u043E\u043C\u0435\u0440 \u0423\u041F
 local.main.form.operation_number = \u043D\u043E\u043C\u0435\u0440 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u0438
