add local variables

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -24,3 +24,4 @@ local.main.message.program_list = Previous program list:
 local.main.table.personnel_number = personnel number
 local.main.table.creation_date = creation date
 local.main.table.cnc_machine_model = CNC machine model
+local.registration.h1.welcome = Welcome to CNC Program Storage account!
