--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -24,3 +24,4 @@ local.main.message.program_list = \u0421\u043F\u0438\u0441\u043E\u043A \u043F\u0
 local.main.table.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
 local.main.table.creation_date = \u0434\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
 local.main.table.cnc_machine_model = \u043C\u043E\u0434\u0435\u043B\u044C \u043E\u0431\u043E\u0440\u0443\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+local.registration.h1.welcome = \u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C!
