--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -26,11 +26,11 @@ local.main.table.cnc_machine_model = \u043C\u043E\u0434\u0435\u043B\u044C \u043E
 local.registration.h1.welcome = \u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C!
 local.registration.form.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
 local.registration.form.personnel_number_title = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0442\u044C 5 \u0446\u0438\u0444\u0440. \u043D\u0430\u043F\u0440. 43510
-local.registration.form.personnel_number_description = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C 5 \u0446\u0438\u0444\u0440 (0-9)
-local.registration.form.employee_name = \u0438\u043C\u044F \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0430
+local.registration.form.personnel_number_description = \u0422\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C 5 \u0446\u0438\u0444\u0440 (0-9)
+local.registration.form.employee_name = \u0438\u043C\u044F
 local.registration.form.employee_name_title = \u0438\u043C\u044F \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0430 \u0434\u043E\u043B\u0436\u043D\u043E \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u0432 \u043D\u0438\u0436\u043D\u0435\u043C \u0438 \u0432\u0435\u0440\u0445\u043D\u0435\u043C \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0435 \u043D\u0430\u043F\u0440. \u0410\u043B\u0435\u043A\u0441\u0435\u0439
 local.registration.form.employee_name_description = \u0421\u0438\u043C\u0432\u043E\u043B\u044B \u043A\u0438\u0440\u0438\u043B\u0438\u0446\u0430 (\u0410-\u044F)
-local.registration.form.employee_surname = \u041E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
+local.registration.form.employee_surname = \u0444\u0430\u043C\u0438\u043B\u0438\u044F
 local.registration.form.employee_surname_title = \u043E\u0442\u0447\u0435\u0441\u0442\u0432\u043E \u0434\u043E\u043B\u0436\u043D\u043E \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u0431\u0443\u043A\u0432\u044B \u0432 \u0432\u0435\u0440\u0445\u043D\u0435\u043C \u0438 \u043D\u0438\u0436\u043D\u0435\u043C \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0435 \u043D\u0430\u043F\u0440. \u0418\u0432\u0430\u043D\u043E\u0432\u0438\u0447. 
 local.registration.form.employee_surname_description = \u041A\u0438\u0440\u0438\u043B\u043B\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0441\u0438\u043C\u0432\u043E\u043B\u044B(\u0410-\u044F).
 local.registration.form.employee_patronymic = \u043E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
