translate admin page

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -20,9 +20,9 @@ local.main.form.code_equipment = equipment code
 local.main.button.save = save
 local.main.button.reset = reset
 local.main.message.program_list = Previous program list:
-local.main.table.personnel_number = personnel number
-local.main.table.creation_date = creation date
-local.main.table.cnc_machine_model = CNC machine model
+local.table.list.programs.personnel_number = personnel number
+local.table.list.programs.creation_date = creation date
+local.table.list.programs.cnc_machine_model = CNC machine model
 local.registration.h1.welcome = Welcome to CNC Program Storage account!
 local.registration.form.personnel_number = personnel number
 local.registration.form.personnel_number_title = login personnel number should only contain digitals. e.g. 43510
@@ -44,8 +44,11 @@ local.registration.form.password = password
 local.registration.form.password_title = password has to contain at least 1 lowcase and uppercase letter,	at least once digital, including at least 1 specail symbol(!?()@#$%^&+=,;:_*) at least 8 to 40 characters long. 
 local.registration.form.password_description = Password has to contain latin symbols (A-z), cyrillic symbols (\u0410-\u044F), numeric digits (0-9) from 8 to 40 characters long.
 local.registration.form.confirm_password = confirm password
-local.registration.button.submit = submit
-local.registration.button.reset = reset
+local.button.submit = submit
+local.button.reset = reset
+local.button.update = update
+local.button.details = details
+local.button.cnc_machines = CNC machines
 local.registration.h4.have_account = Have an account already?
 local.registration.h4.log_in = log in
 local.authorization.h1.please = Please, enter password and login for authorization
@@ -54,8 +57,21 @@ local.authorization.form.personnel_number_title = login personnel number should 
 local.authorization.form.personnel_number_placeholder = login personnel number...
 local.authorization.form.password = password
 local.authorization.form.password_title = password has to contain at least 1 lowcase and uppercase letter,	at least once digital, including at least 1 specail symbol(!?()@#$%^&+=,;:_*) at least 8 to 40 characters long. 
-local.authorization.form.password_placeholder = password...s
-local.authorization.button.submit = submit
-local.authorization.button.reset = reset
+local.authorization.form.password_placeholder = password...
+local.admin.message.list_programs = CNC programs list:
+local.admin.table.program_id = CNC program id
+local.admin.table.number_program = CNC program's number
+local.admin.table.operation_number = operation number
+local.admin.table.creation_date = creation date
+local.admin.table.comment = comment
+local.admin.table.active = active
+local.admin.table.personnel_number = login personnel number
+local.admin.table.detail_id = detail id
+local.admin.table.detail = detail
+local.admin.table.cnc_machine = CNC machine
+local.admin.table.model_cnc_machine = CNC machine model
+
+
+
 
 
