--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -20,9 +20,9 @@ local.main.form.code_equipment = \u043A\u043E\u0434 \u043E\u0431\u043E\u0440\u04
 local.main.button.save = \u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
 local.main.button.reset = \u0441\u0431\u0440\u043E\u0441\u0438\u0442\u044C
 local.main.message.program_list = \u0421\u043F\u0438\u0441\u043E\u043A \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C:
-local.main.table.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
-local.main.table.creation_date = \u0434\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-local.main.table.cnc_machine_model = \u043C\u043E\u0434\u0435\u043B\u044C \u043E\u0431\u043E\u0440\u0443\u0434\u043E\u0432\u0430\u043D\u0438\u044F
+local.table.list.programs.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
+local.table.list.programs.creation_date = \u0434\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
+local.table.list.programs.cnc_machine_model = \u043C\u043E\u0434\u0435\u043B\u044C \u043E\u0431\u043E\u0440\u0443\u0434\u043E\u0432\u0430\u043D\u0438\u044F
 local.registration.h1.welcome = \u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C!
 local.registration.form.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
 local.registration.form.personnel_number_title = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0442\u044C 5 \u0446\u0438\u0444\u0440. \u043D\u0430\u043F\u0440. 43510
@@ -44,8 +44,11 @@ local.registration.form.password = \u043F\u0430\u0440\u043E\u043B\u044C
 local.registration.form.password_title = \u043F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u043A\u0430\u043A \u043C\u0438\u043D\u0438\u043C\u0443\u043C 1 \u0441\u0442\u0440\u043E\u0447\u043D\u0443\u044E \u0438 \u043F\u0440\u043E\u043F\u0438\u0441\u043D\u0443\u044E \u0431\u0443\u043A\u0432\u0443, \u0445\u043E\u0442\u044F \u0431\u044B \u043E\u0434\u043D\u0443 \u0446\u0438\u0444\u0440\u0443, \u0432\u043A\u043B\u044E\u0447\u0430\u044F \u043A\u0430\u043A \u043C\u0438\u043D\u0438\u043C\u0443\u043C 1 \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0439 \u0441\u0438\u043C\u0432\u043E\u043B (!?()@#$%^&+=,;:_*) \u0434\u043B\u0438\u043D\u043E\u0439 \u043D\u0435 \u043C\u0435\u043D\u0435\u0435 8\u201340 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432. 
 local.registration.form.password_description = \u041F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u043B\u0430\u0442\u0438\u043D\u0441\u043A\u0438\u0435 \u0441\u0438\u043C\u0432\u043E\u043B\u044B (A-z), \u043A\u0438\u0440\u0438\u043B\u043B\u0438\u0446\u0443 (\u0410-\u044F), \u0446\u0438\u0444\u0440\u044B (0-9) \u0434\u043B\u0438\u043D\u043E\u0439 \u043E\u0442 8 \u0434\u043E 40 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432.
 local.registration.form.confirm_password = \u043F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
-local.registration.button.submit = \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
-local.registration.button.reset = \u0441\u0431\u0440\u043E\u0441
+local.button.submit = \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
+local.button.reset = \u0441\u0431\u0440\u043E\u0441
+local.button.update = обновить
+local.button.details = детали
+local.button.cnc_machines = станки с ЧПУ
 local.registration.h4.have_account = \u0423\u0436\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B?
 local.registration.h4.log_in = \u0432\u043E\u0439\u0442\u0438
 local.authorization.h1.please = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C \u0438 \u043B\u043E\u0433\u0438\u043D \u0434\u043B\u044F \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
@@ -55,5 +58,16 @@ local.authorization.form.personnel_number_placeholder = \u0442\u0430\u0431\u0435
 local.authorization.form.password = \u043F\u0430\u0440\u043E\u043B\u044C
 local.authorization.form.password_title = \u043F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u043A\u0430\u043A \u043C\u0438\u043D\u0438\u043C\u0443\u043C 1 \u0441\u0442\u0440\u043E\u0447\u043D\u0443\u044E \u0438 \u043F\u0440\u043E\u043F\u0438\u0441\u043D\u0443\u044E \u0431\u0443\u043A\u0432\u0443, \u0445\u043E\u0442\u044F \u0431\u044B \u043E\u0434\u043D\u0443 \u0446\u0438\u0444\u0440\u0443, \u0432\u043A\u043B\u044E\u0447\u0430\u044F \u043A\u0430\u043A \u043C\u0438\u043D\u0438\u043C\u0443\u043C 1 \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0439 \u0441\u0438\u043C\u0432\u043E\u043B (!?()@#$%^&+=,;:_*) \u0434\u043B\u0438\u043D\u043E\u0439 \u043D\u0435 \u043C\u0435\u043D\u0435\u0435 8\u201340 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432. 
 local.authorization.form.password_placeholder = \u043F\u0430\u0440\u043E\u043B\u044C...
-local.authorization.button.submit = \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
-local.authorization.button.reset = \u0441\u0431\u0440\u043E\u0441
+local.admin.message.list_programs = Список ЧПУ программ:
+local.admin.table.program_id = id программы
+local.admin.table.number_program = Номер УП
+local.admin.table.operation_number = номер операции
+local.admin.table.creation_date = дата создания
+local.admin.table.comment = комментарий
+local.admin.table.active = активный
+local.admin.table.personnel_number = табельный номер
+local.admin.table.detail_id = id детали
+local.admin.table.detail = деталь
+local.admin.table.cnc_machine = станок с ЧПУ
+local.admin.table.model_cnc_machine = модель станка с ЧПУ
+
