translate user info page

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -70,6 +70,9 @@ local.admin.table.detail_id = detail id
 local.admin.table.detail = detail
 local.admin.table.cnc_machine = CNC machine
 local.admin.table.model_cnc_machine = CNC machine model
+local.user.info.message.information = User information:
+local.user.info.form.creation_date = creation date
+local.user.info.form.role = role
 
 
 
