--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -70,4 +70,7 @@ local.admin.table.detail_id = id детали
 local.admin.table.detail = деталь
 local.admin.table.cnc_machine = станок с ЧПУ
 local.admin.table.model_cnc_machine = модель станка с ЧПУ
+local.user.info.message.information = Информация о пользователе:
+local.user.info.form.creation_date = дата создания
+local.user.info.form.role = роль
 
