replace page's buttons to navigation area

--- a/src/main/resources/properties/local_en.properties
+++ b/src/main/resources/properties/local_en.properties
@@ -9,6 +9,9 @@ local.main.navigate.authorization = LOG IN
 local.main.navigate.admin_page = ADMIN PAGE
 local.main.navigate.log_out = LOG OUT
 local.main.navigate.users = USERS
+local.navigate.details = DETAILS
+local.navigate.cnc_programs = CNC PROGRAMS
+local.navigate.cnc_machines = CNC MACHINES
 local.main.message.to_save_program = To save program:
 local.main.form.number = number CNC program
 local.main.form.operation_number = operation number
@@ -47,8 +50,6 @@ local.registration.form.confirm_password = confirm password
 local.button.submit = submit
 local.button.reset = reset
 local.button.update = update
-local.button.details = details
-local.button.cnc_machines = CNC machines
 local.registration.h4.have_account = Have an account already?
 local.registration.h4.log_in = log in
 local.authorization.h1.please = Please, enter password and login for authorization
