--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -9,6 +9,9 @@ local.main.navigate.authorization = \u0412\u041E\u0419\u0422\u0418
 local.main.navigate.admin_page = \u0410\u0414\u041C\u0418\u041D\u0418\u0421\u0422\u0420\u0410\u0422\u041E\u0420
 local.main.navigate.log_out = \u0412\u042B\u0419\u0422\u0418
 local.main.navigate.users = \u041F\u041E\u041B\u042C\u0417\u041E\u0412\u0410\u0422\u0415\u041B\u0418
+local.navigate.details = ДЕТАЛИ
+local.navigate.cnc_programs = ПРОГРАММЫ ЧПУ
+local.navigate.cnc_machines = СТАНКИ С ЧПУ
 local.main.message.to_save_program = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0443:
 local.main.form.number = \u043D\u043E\u043C\u0435\u0440 \u0423\u041F
 local.main.form.operation_number = \u043D\u043E\u043C\u0435\u0440 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u0438
@@ -47,8 +50,6 @@ local.registration.form.confirm_password = \u043F\u043E\u0432\u0442\u043E\u0440\
 local.button.submit = \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
 local.button.reset = \u0441\u0431\u0440\u043E\u0441
 local.button.update = обновить
-local.button.details = детали
-local.button.cnc_machines = станки с ЧПУ
 local.registration.h4.have_account = \u0423\u0436\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B?
 local.registration.h4.log_in = \u0432\u043E\u0439\u0442\u0438
 local.authorization.h1.please = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C \u0438 \u043B\u043E\u0433\u0438\u043D \u0434\u043B\u044F \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
