decode text to UTF-8

--- a/src/main/resources/properties/local_ru.properties
+++ b/src/main/resources/properties/local_ru.properties
@@ -1,64 +1,64 @@
-local.message = \u041B\u043E\u043A\u0430\u043B\u0438\u0437\u0430\u0446\u0438\u044F \u0442\u0435\u0441\u0442
+local.message = Локализация тест
 local.locbutton.en = eng
-local.locbutton.ru = \u0440\u0443\u0441
-local.locbutton.search = \u041F\u043E\u0438\u0441\u043A
-local.search_placeholder = \u041D\u0430\u0439\u0442\u0438...
-local.main.navigate.home = \u041D\u0410 \u0413\u041B\u0410\u0412\u041D\u0423\u042E
-local.main.navigate.registration = \u0420\u0415\u0413\u0418\u0421\u0422\u0420\u0410\u0426\u0418\u042F
-local.main.navigate.authorization = \u0412\u041E\u0419\u0422\u0418
-local.main.navigate.admin_page = \u0410\u0414\u041C\u0418\u041D\u0418\u0421\u0422\u0420\u0410\u0422\u041E\u0420
-local.main.navigate.log_out = \u0412\u042B\u0419\u0422\u0418
-local.main.navigate.users = \u041F\u041E\u041B\u042C\u0417\u041E\u0412\u0410\u0422\u0415\u041B\u0418
+local.locbutton.ru = рус
+local.locbutton.search = Поиск
+local.search_placeholder = Найти...
+local.main.navigate.home = НА ГЛАВНУЮ
+local.main.navigate.registration = РЕГИСТРАЦИЯ
+local.main.navigate.authorization = ВОЙТИ
+local.main.navigate.admin_page = АДМИНИСТРАТОР
+local.main.navigate.log_out = ВЫЙТИ
+local.main.navigate.users = ПОЛЬЗОВАТЕЛИ
 local.navigate.details = ДЕТАЛИ
 local.navigate.cnc_programs = ПРОГРАММЫ ЧПУ
 local.navigate.cnc_machines = СТАНКИ С ЧПУ
-local.main.message.to_save_program = \u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u0443:
-local.main.form.number = \u043D\u043E\u043C\u0435\u0440 \u0423\u041F
-local.main.form.operation_number = \u043D\u043E\u043C\u0435\u0440 \u043E\u043F\u0435\u0440\u0430\u0446\u0438\u0438
-local.main.form.program_text = \u0442\u0435\u043A\u0441\u0442 \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C\u044B
-local.main.form.comment = \u043A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439*
-local.main.form.detail = \u0434\u0435\u0442\u0430\u043B\u044C
-local.main.form.cnc_machine = \u0441\u0442\u0430\u043D\u043E\u043A
-local.main.form.code_equipment = \u043A\u043E\u0434 \u043E\u0431\u043E\u0440\u0443\u0434\u043E\u0432\u0430\u043D\u0438\u044F
-local.main.button.save = \u0441\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
-local.main.button.reset = \u0441\u0431\u0440\u043E\u0441\u0438\u0442\u044C
-local.main.message.program_list = \u0421\u043F\u0438\u0441\u043E\u043A \u043F\u0440\u043E\u0433\u0440\u0430\u043C\u043C:
-local.table.list.programs.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
-local.table.list.programs.creation_date = \u0434\u0430\u0442\u0430 \u0441\u043E\u0437\u0434\u0430\u043D\u0438\u044F
-local.table.list.programs.cnc_machine_model = \u043C\u043E\u0434\u0435\u043B\u044C \u043E\u0431\u043E\u0440\u0443\u0434\u043E\u0432\u0430\u043D\u0438\u044F
-local.registration.h1.welcome = \u0414\u043E\u0431\u0440\u043E \u043F\u043E\u0436\u0430\u043B\u043E\u0432\u0430\u0442\u044C!
-local.registration.form.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
-local.registration.form.personnel_number_title = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0442\u044C 5 \u0446\u0438\u0444\u0440. \u043D\u0430\u043F\u0440. 43510
-local.registration.form.personnel_number_description = \u0422\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C 5 \u0446\u0438\u0444\u0440 (0-9)
-local.registration.form.employee_name = \u0438\u043C\u044F
-local.registration.form.employee_name_title = \u0438\u043C\u044F \u0441\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A\u0430 \u0434\u043E\u043B\u0436\u043D\u043E \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u0432 \u043D\u0438\u0436\u043D\u0435\u043C \u0438 \u0432\u0435\u0440\u0445\u043D\u0435\u043C \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0435 \u043D\u0430\u043F\u0440. \u0410\u043B\u0435\u043A\u0441\u0435\u0439
-local.registration.form.employee_name_description = \u0421\u0438\u043C\u0432\u043E\u043B\u044B \u043A\u0438\u0440\u0438\u043B\u0438\u0446\u0430 (\u0410-\u044F)
-local.registration.form.employee_surname = \u0444\u0430\u043C\u0438\u043B\u0438\u044F
-local.registration.form.employee_surname_title = \u043E\u0442\u0447\u0435\u0441\u0442\u0432\u043E \u0434\u043E\u043B\u0436\u043D\u043E \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u0431\u0443\u043A\u0432\u044B \u0432 \u0432\u0435\u0440\u0445\u043D\u0435\u043C \u0438 \u043D\u0438\u0436\u043D\u0435\u043C \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0435 \u043D\u0430\u043F\u0440. \u0418\u0432\u0430\u043D\u043E\u0432\u0438\u0447. 
-local.registration.form.employee_surname_description = \u041A\u0438\u0440\u0438\u043B\u043B\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0441\u0438\u043C\u0432\u043E\u043B\u044B(\u0410-\u044F).
-local.registration.form.employee_patronymic = \u043E\u0442\u0447\u0435\u0441\u0442\u0432\u043E
-local.registration.form.employee_patronymic_title = \u043E\u0442\u0447\u0435\u0441\u0442\u0432\u043E \u0434\u043E\u043B\u0436\u043D\u043E \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C\u0442\u044C \u0431\u0443\u043A\u0432\u044B \u043D\u0438\u0436\u043D\u0435\u0433\u044C\\u043E \u0438 \u0432\u0435\u0440\u0445\u043D\u0435\u0433\u043E \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430 \u043D\u0430\u043F\u0440. \u041F\u0435\u0442\u0440\u043E\u0432. 
-local.registration.form.employee_patronymic_description = \u041A\u0438\u0440\u0438\u043B\u043B\u0438\u0447\u0435\u0441\u043A\u0438\u0435 \u0441\u0438\u043C\u0432\u043E\u043B\u044B(\u0410-\u044F).
-local.registration.form.position = \u0434\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u044C
-local.registration.form.position.engineer = \u0438\u043D\u0436\u0435\u043D\u0435\u0440-\u0442\u0435\u0445\u043D\u043E\u043B\u043E\u0433
-local.registration.form.position.programmer = \u043D\u0430\u043B\u0430\u0434\u0447\u0438\u043A \u0441\u0442\u0430\u043D\u043A\u043E\u0432 \u0441 \u0427\u041F\u0423
-local.registration.form.email = \u044D\u043B\u0435\u043A\u0442\u0440. \u043F\u043E\u0447\u0442\u0430
-local.registration.form.password = \u043F\u0430\u0440\u043E\u043B\u044C
-local.registration.form.password_title = \u043F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u043A\u0430\u043A \u043C\u0438\u043D\u0438\u043C\u0443\u043C 1 \u0441\u0442\u0440\u043E\u0447\u043D\u0443\u044E \u0438 \u043F\u0440\u043E\u043F\u0438\u0441\u043D\u0443\u044E \u0431\u0443\u043A\u0432\u0443, \u0445\u043E\u0442\u044F \u0431\u044B \u043E\u0434\u043D\u0443 \u0446\u0438\u0444\u0440\u0443, \u0432\u043A\u043B\u044E\u0447\u0430\u044F \u043A\u0430\u043A \u043C\u0438\u043D\u0438\u043C\u0443\u043C 1 \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0439 \u0441\u0438\u043C\u0432\u043E\u043B (!?()@#$%^&+=,;:_*) \u0434\u043B\u0438\u043D\u043E\u0439 \u043D\u0435 \u043C\u0435\u043D\u0435\u0435 8\u201340 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432. 
-local.registration.form.password_description = \u041F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u043B\u0430\u0442\u0438\u043D\u0441\u043A\u0438\u0435 \u0441\u0438\u043C\u0432\u043E\u043B\u044B (A-z), \u043A\u0438\u0440\u0438\u043B\u043B\u0438\u0446\u0443 (\u0410-\u044F), \u0446\u0438\u0444\u0440\u044B (0-9) \u0434\u043B\u0438\u043D\u043E\u0439 \u043E\u0442 8 \u0434\u043E 40 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432.
-local.registration.form.confirm_password = \u043F\u043E\u0432\u0442\u043E\u0440\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C
-local.button.submit = \u043E\u0442\u043F\u0440\u0430\u0432\u0438\u0442\u044C
-local.button.reset = \u0441\u0431\u0440\u043E\u0441
+local.main.message.to_save_program = Сохранить программу:
+local.main.form.number = номер УП
+local.main.form.operation_number = номер операции
+local.main.form.program_text = текст программы
+local.main.form.comment = комментарий*
+local.main.form.detail = деталь
+local.main.form.cnc_machine = станок
+local.main.form.code_equipment = код оборудования
+local.main.button.save = сохранить
+local.main.button.reset = сбросить
+local.main.message.program_list = Список программ:
+local.table.list.programs.personnel_number = табельный номер
+local.table.list.programs.creation_date = дата создания
+local.table.list.programs.cnc_machine_model = модель оборудования
+local.registration.h1.welcome = Добро пожаловать!
+local.registration.form.personnel_number = табельный номер
+local.registration.form.personnel_number_title = табельный номер должен содержть 5 цифр. напр. 43510
+local.registration.form.personnel_number_description = Табельный номер должен содержать 5 цифр (0-9)
+local.registration.form.employee_name = имя
+local.registration.form.employee_name_title = имя сотрудника должно содержать в нижнем и верхнем регистре напр. Алексей
+local.registration.form.employee_name_description = Символы кирилица (А-я)
+local.registration.form.employee_surname = фамилия
+local.registration.form.employee_surname_title = отчество должно содержать буквы в верхнем и нижнем регистре напр. Иванович. 
+local.registration.form.employee_surname_description = Кириллические символы(А-я).
+local.registration.form.employee_patronymic = отчество
+local.registration.form.employee_patronymic_title = отчество должно содержать буквы нижнего и верхнего регистра напр. Петров. 
+local.registration.form.employee_patronymic_description = Кириллические символы(А-я).
+local.registration.form.position = должность
+local.registration.form.position.engineer = инженер-технолог
+local.registration.form.position.programmer = наладчик станков с ЧПУ
+local.registration.form.email = электр. почта
+local.registration.form.password = пароль
+local.registration.form.password_title = пароль должен содержать как минимум 1 строчную и прописную букву, хотя бы одну цифру, включая как минимум 1 специальный символ (!?()@#$%^&+=,;:_*) длиной не менее 8–40 символов.  
+local.registration.form.password_description = Пароль должен содержать латинские символы (A-z), кириллицу (А-я), цифры (0-9) длиной от 8 до 40 символов.
+local.registration.form.confirm_password = повторите пароль
+local.button.submit = отправить
+local.button.reset = сброс
 local.button.update = обновить
-local.registration.h4.have_account = \u0423\u0436\u0435 \u0437\u0430\u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0438\u0440\u043E\u0432\u0430\u043D\u044B?
-local.registration.h4.log_in = \u0432\u043E\u0439\u0442\u0438
-local.authorization.h1.please = \u041F\u043E\u0436\u0430\u043B\u0443\u0439\u0441\u0442\u0430, \u0432\u0432\u0435\u0434\u0438\u0442\u0435 \u043F\u0430\u0440\u043E\u043B\u044C \u0438 \u043B\u043E\u0433\u0438\u043D \u0434\u043B\u044F \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438
-local.authorization.form.personnel_number = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440
-local.authorization.form.personnel_number_title = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440 \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0442\u044C 5 \u0446\u0438\u0444\u0440. \u043D\u0430\u043F\u0440. 43510
-local.authorization.form.personnel_number_placeholder = \u0442\u0430\u0431\u0435\u043B\u044C\u043D\u044B\u0439 \u043D\u043E\u043C\u0435\u0440...
-local.authorization.form.password = \u043F\u0430\u0440\u043E\u043B\u044C
-local.authorization.form.password_title = \u043F\u0430\u0440\u043E\u043B\u044C \u0434\u043E\u043B\u0436\u0435\u043D \u0441\u043E\u0434\u0435\u0440\u0436\u0430\u0442\u044C \u043A\u0430\u043A \u043C\u0438\u043D\u0438\u043C\u0443\u043C 1 \u0441\u0442\u0440\u043E\u0447\u043D\u0443\u044E \u0438 \u043F\u0440\u043E\u043F\u0438\u0441\u043D\u0443\u044E \u0431\u0443\u043A\u0432\u0443, \u0445\u043E\u0442\u044F \u0431\u044B \u043E\u0434\u043D\u0443 \u0446\u0438\u0444\u0440\u0443, \u0432\u043A\u043B\u044E\u0447\u0430\u044F \u043A\u0430\u043A \u043C\u0438\u043D\u0438\u043C\u0443\u043C 1 \u0441\u043F\u0435\u0446\u0438\u0430\u043B\u044C\u043D\u044B\u0439 \u0441\u0438\u043C\u0432\u043E\u043B (!?()@#$%^&+=,;:_*) \u0434\u043B\u0438\u043D\u043E\u0439 \u043D\u0435 \u043C\u0435\u043D\u0435\u0435 8\u201340 \u0441\u0438\u043C\u0432\u043E\u043B\u043E\u0432. 
-local.authorization.form.password_placeholder = \u043F\u0430\u0440\u043E\u043B\u044C...
+local.registration.h4.have_account = Уже зарегистрированы?
+local.registration.h4.log_in = войти
+local.authorization.h1.please = Пожалуйста, введите пароль и логин для регистрации
+local.authorization.form.personnel_number = табельный номер
+local.authorization.form.personnel_number_title = табельный номер должен содержть 5 цифр. напр. 43510
+local.authorization.form.personnel_number_placeholder = табельный номер...
+local.authorization.form.password = пароль
+local.authorization.form.password_title = пароль должен содержать как минимум 1 строчную и прописную букву, хотя бы одну цифру, включая как минимум 1 специальный символ (!?()@#$%^&+=,;:_*) длиной не менее 8–40 символов. 
+local.authorization.form.password_placeholder = пароль...
 local.admin.message.list_programs = Список ЧПУ программ:
 local.admin.table.program_id = id программы
 local.admin.table.number_program = Номер УП
